using java 11 instead of 16 as it is the default java version of GEMOC